--- a/motorpm1.html
+++ b/motorpm1.html
@@ -69,10 +69,7 @@ body {
   text-align: center;
   box-shadow: 0 2px 6px rgba(0,0,0,0.15);
 }
-.summary h3 {
-  margin: 0;
-  color: #003f88;
-}
+.summary h3 { margin: 0; color: #003f88; }
 .summary p {
   font-size: 26px;
   font-weight: bold;
@@ -87,10 +84,7 @@ body {
   flex-wrap: wrap;
   margin-bottom: 12px;
 }
-.controls input {
-  padding: 8px;
-  width: 240px;
-}
+.controls input { padding: 8px; width: 240px; }
 .controls button {
   padding: 8px 14px;
   background: #003f88;
@@ -106,6 +100,7 @@ table {
   border-collapse: collapse;
   background: white;
   box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+  table-layout: fixed; /* ⭐ uniform look */
 }
 th, td {
   border: 1px solid #ccc;
@@ -117,6 +112,15 @@ th {
   color: white;
   position: sticky;
   top: 0;
+  white-space: normal; /* ⭐ allow wrap */
+  word-break: break-word;
+  line-height: 1.2;
+}
+
+/* ⭐ uniform width for date columns */
+th:nth-child(n+6),
+td:nth-child(n+6){
+  width: 110px;
 }
 
 /* ===== STATUS COLORS ===== */
@@ -131,13 +135,14 @@ th {
   font-weight: bold;
 }
 
+/* ===== DRIVE COLOR BAND ===== */
+.drive-band {
+  font-weight: bold;
+}
+
 /* ===== UX ===== */
-tbody tr {
-  cursor: pointer;
-}
-tbody tr:hover {
-  background: #eef5ff;
-}
+tbody tr { cursor: pointer; }
+tbody tr:hover { background: #eef5ff; }
 
 @media print {
   .controls, .header-left { display: none; }
@@ -166,7 +171,6 @@ tbody tr:hover {
 
 <div class="container">
 
-<!-- ===== SUMMARY ===== -->
 <div class="summary">
   <div class="card">
     <h3>Total Motors</h3>
@@ -229,10 +233,20 @@ function fmt(d){
     : "";
 }
 
-/* AUTO WIDTH */
-function autoWidth(){
-  document.querySelectorAll("#pmTable th:nth-child(n+6), #pmTable td:nth-child(n+6)")
-    .forEach(el=>el.style.whiteSpace="nowrap");
+/* 🎨 color generator for Main Drive */
+const driveColorMap={};
+const palette=[
+  "#e3f2fd","#fce4ec","#e8f5e9","#fff3e0",
+  "#ede7f6","#e0f7fa","#f1f8e9","#fbe9e7"
+];
+let colorIndex=0;
+
+function getDriveColor(key){
+  if(!driveColorMap[key]){
+    driveColorMap[key]=palette[colorIndex%palette.length];
+    colorIndex++;
+  }
+  return driveColorMap[key];
 }
 
 /* LOAD */
@@ -248,7 +262,6 @@ async function loadData(){
 
   j.rows.forEach(row=>{
 
-    // Filter only when column E = S
     if(String(row[4]||"").toUpperCase()!=="S") return;
     if(!row[1] || !row[2]) return;
 
@@ -267,6 +280,9 @@ async function loadData(){
     if(sOver) overS++;
     if(tOver) overT++;
 
+    const drive=row[1]||"";
+    const bandColor=getDriveColor(drive);
+
     const tr=document.createElement("tr");
 
     tr.onclick=()=> {
@@ -276,7 +292,7 @@ async function loadData(){
 
     tr.innerHTML=`
       <td>${row[0]||""}</td>
-      <td>${row[1]||""}</td>
+      <td class="drive-band" style="background:${bandColor}">${drive}</td>
       <td>${row[2]||""}</td>
       <td>${row[3]||""}</td>
       <td>${row[5]||""}</td>
@@ -304,11 +320,8 @@ async function loadData(){
         ? "":"none";
     });
   };
-
-  autoWidth();
 }
 
-/* EXPORT */
 function exportExcel(){
   let csv=[];
   document.querySelectorAll("#pmTable tr").forEach(r=>{
